[FIX] #58783 conditions inactive values in grey

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -235,7 +235,7 @@
                                                         }
                                                         else
                                                         {
-                                                            <option value="@op.Value" style="color: lightgray;">@op.Text</option>
+                                                            <option value="@op.Value" class="DisabledChosen">@op.Text</option>
                                                         }
                                                     }
                                                 </select>
@@ -254,7 +254,7 @@
                                                         }
                                                         else
                                                         {
-                                                            <option value="@op.Value" style="color: lightgray;">@op.Text</option>
+                                                            <option value="@op.Value" class="DisabledChosen">@op.Text</option>
                                                         }
                                                     }
                                                 </select>
@@ -285,7 +285,7 @@
                                                         }
                                                         else
                                                         {
-                                                            <option value="@op.Value" style="color: lightgray;">@op.Text</option>
+                                                            <option value="@op.Value" class="DisabledChosen">@op.Text</option>
                                                         }
                                                     }
                                                 </select>
@@ -304,7 +304,7 @@
                                                         }
                                                         else
                                                         {
-                                                            <option value="@op.Value" style="color: lightgray;">@op.Text</option>
+                                                            <option value="@op.Value" class="DisabledChosen">@op.Text</option>
                                                         }
                                                     }
                                                 </select>
