[FIX] #58810 Admin - prod area. Security

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/New.cshtml
@@ -21,9 +21,20 @@
     $("input:text:visible:first").focus();
 
     function submitForm() {
- 
-        for (var i = 0; i < document.getElementById("WgSelected").length; i++) {
-            document.getElementById("WgSelected")[i].selected = true;
+        
+        var checkbox_val = document.getElementById("chkPermission").checked;
+
+        if (checkbox_val == false) {
+
+            for (var i = 0; i < document.getElementById("WgSelected").length; i++) {
+                document.getElementById("WgSelected")[i].selected = false;
+            }
+        }
+        else {
+
+            for (var i = 0; i < document.getElementById("WgSelected").length; i++) {
+                document.getElementById("WgSelected")[i].selected = true;
+            }
         }
 
         $("#target").submit();
