--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/Edit.cshtml
@@ -26,9 +26,21 @@
 
         function submitForm() {
 
-            for (var i = 0; i < document.getElementById("WgSelected").length; i++) {
-                document.getElementById("WgSelected")[i].selected = true;
+            var checkbox_val = document.getElementById("chkPermission").checked;
+           
+            if (checkbox_val == false) {
+                
+                for (var i = 0; i < document.getElementById("WgSelected").length; i++) {
+                    document.getElementById("WgSelected")[i].selected = false;
+                }
             }
+            else {
+                
+                for (var i = 0; i < document.getElementById("WgSelected").length; i++) {
+                    document.getElementById("WgSelected")[i].selected = true;
+                }
+            }
+            
 
             $("#target").submit();
         }
