[FIX] #58812 Short cut to new case in Helpdesk menu - don't show if not access to create a case

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
@@ -48,15 +48,17 @@
                     <ul class="nav dh-nav">
                         @if (model.CustomerSetting.ShowQuickNewCaseLink == 1)
                         {
-                            <li class="newcase">
+                            if (SessionFacade.CurrentUser.CreateCasePermission == 1)
+                            {
+                                <li class="newcase">
+                                    <a href=@url target="_blank">
+                                        <span>
+                                            @text
+                                        </span>
+                                    </a>
+                                </li>
+                            }
 
-
-                                <a href=@url target="_blank">
-                                    <span>
-                                        @text
-                                    </span>
-                                </a>
-                            </li>
                         }
                         <li class="orange">
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
