[FIX] #58702 Hide Workflow step if Case is locked by another user

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -410,9 +410,10 @@
                         }
 
                 @*At the moment we do not check access for this /TAN*@
-              
+                @if(!Model.CaseLock.IsLocked)
+                {
                     @Html.Partial("WorkflowStep", Model.WorkflowSteps)
-                
+                }
                     </ul>
                 </div>
                 <div class="pull-right">
