[FIX] Translation Admin - SelfService setting

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -189,7 +189,7 @@
                         <table class="tableform">
                             <tr>
                                 <td class="span3">
-                                    @Translation.GetCoreTextTranslation("Mina ärende visar")
+                                    @Translation.GetCoreTextTranslation("Mina ärenden visar")
                                 </td>
                                 <td>
                                     @Html.CheckBoxFor(m => m.Customer.MyCasesInitiator) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Anmälare")
