[FIX] #58876 Mandatory on reopen

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
@@ -1340,7 +1340,7 @@
                                     <input type="hidden" name="CaseFieldSettings[14].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[14].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.CaseNumber.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[14].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.CaseNumber.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[14].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -1423,7 +1423,7 @@
                                     <input type="hidden" name="CaseFieldSettings[15].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[15].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.RegTime.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[15].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.RegTime.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[15].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -1464,7 +1464,7 @@
                                     <input type="hidden" name="CaseFieldSettings[16].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[16].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.ChangeTime.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[16].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.ChangeTime.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[16].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -1505,7 +1505,7 @@
                                     <input type="hidden" name="CaseFieldSettings[17].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[17].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.User_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[17].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.User_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[17].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -1546,7 +1546,7 @@
                                     <input type="hidden" name="CaseFieldSettings[18].Required" value="1" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[18].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.CaseType_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[18].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.CaseType_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[18].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -2079,7 +2079,7 @@
                                     <input type="hidden" name="CaseFieldSettings[31].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[31].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.SMS.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[31].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.SMS.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[31].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -2885,7 +2885,7 @@
                                     <input type="hidden" name="CaseFieldSettings[47].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[47].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[47].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[47].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -2926,7 +2926,7 @@
                                     <input type="hidden" name="CaseFieldSettings[48].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[48].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.tblLog_Text_External.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[48].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.tblLog_Text_External.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[48].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -2967,7 +2967,7 @@
                                     <input type="hidden" name="CaseFieldSettings[49].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[49].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.tblLog_Charge.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[49].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.tblLog_Charge.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[49].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
@@ -3008,7 +3008,7 @@
                                     <input type="hidden" name="CaseFieldSettings[50].Required" value="0" />
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="CaseFieldSettings[50].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.tblLog_Filename.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="checkbox" name="CaseFieldSettings[50].RequiredIfReopened" disabled="disabled" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.tblLog_Filename.ToString()) == 1 ? "checked=checked" : "") value="1" />
                                     <input type="hidden" name="CaseFieldSettings[50].RequiredIfReopened" value="0" />
                                 </td>
                                 <td>
