[UPD] change text

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -31,7 +31,7 @@
                         <table class="tableform">
                             <tr>
                                 <td class="span3">
-                                    @Translation.Get("Visa i menyn", Enums.TranslationSource.TextTranslation)
+                                    @Translation.Get("Resources", Enums.TranslationSource.TextTranslation)
                                 </td>
                                 <td>
                                     @Html.CheckBoxFor(m => m.Customer.RestrictUserToGroupOnExternalPage) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Restrict user to access to group")
