[FIX] #59012 Case template - Priority - read only creates Watchdate

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1815,7 +1815,7 @@
                                                     if (priority == null)
                                                     {
                                                         <input type="text" value="" readonly="true" id="priority_Name" />
-                                                        @Html.HiddenFor(m => Model.case_.Priority_Id, new { @class = "sla-value", data_sla = 0 })
+                                                        @Html.HiddenFor(m => Model.case_.Priority_Id, new { @class = "sla-value", data_sla = "" })
                                                     }
                                                     else
                                                     {
