--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -117,6 +117,10 @@
     @Html.HiddenFor(model => model.NewCase.FinishingDescription)
     @Html.HiddenFor(model => model.NewCase.PlanDate)
     @Html.HiddenFor(model => model.NewCase.Performer_User_Id)
+    @Html.HiddenFor(model => model.NewCase.InvoiceNumber)
+    @Html.HiddenFor(model => model.NewCase.Supplier_Id)
+    @Html.HiddenFor(model => model.NewCase.Change_Id)
+    @Html.HiddenFor(model => model.NewCase.FinishingDescription)
 
     @Html.HiddenFor(model => model.NewCase.IsAbout.ReportedBy)
     @Html.HiddenFor(model => model.NewCase.IsAbout.Person_Name)
